--- a/index.html
+++ b/index.html
@@ -21,30 +21,23 @@
             <div class="js-video-container video-container"></div>
             <div class="button-container">
                 <button class="js-play-button control-button">
-                    <i class="fa fa-play control" aria-hidden="true"></i>
+                    <i class="fa fa-play" aria-hidden="true"></i>
                 </button>
                 <button class="js-pause-button control-button">
-                    <i class="fa fa-pause control" aria-hidden="true"></i>
+                    <i class="fa fa-pause" aria-hidden="true"></i>
                 </button>
                 <button class="js-mute-button control-button">
-                    <i class="fa fa-volume-up control" aria-hidden="true"></i>
+                    <i class="fa fa-volume-up" aria-hidden="true"></i>
                 </button>
                 <button class="js-volume-button control-button">
-                    <i class="fa fa-volume-off control" aria-hidden="true"></i>
+                    <i class="fa fa-volume-off" aria-hidden="true"></i>
                 </button>
 
                 <div class="separator"></div>
                 
                 <button class="js-fullscreen-button control-button">
-                    <i class="fa fa-expand control" aria-hidden="true"></i>
+                    <i class="fa fa-expand" aria-hidden="true"></i>
                 </button>
-            </div>
-            <div class="button-container">
-                <div class="js-progress progressbar" style="background-color: rgb(0, 0, 0);">
-                    <div class="js-progress-slider progressbar-inner" style="background-color: rgba(255, 0, 0, 0.26);">
-                        <p class="js-current-time control"></p>
-                    </div>
-                </div>
             </div>
         </div>
     </body>
