--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <div class="js-video-container video-container"></div>
             <div class="button-container">
                 <button class="js-play-button control-button">
-                    <i class="fa fa-play" aria-hidden="true"></i>
+                    <i class="fa fa-play control-button-icon" aria-hidden="true"></i>
                 </button>
                 <button class="js-pause-button control-button">
-                    <i class="fa fa-pause" aria-hidden="true"></i>
+                    <i class="fa fa-pause control-button-icon" aria-hidden="true"></i>
                 </button>
                 <button class="js-mute-button control-button">
-                    <i class="fa fa-volume-up" aria-hidden="true"></i>
+                    <i class="fa fa-volume-up control-button-icon" aria-hidden="true"></i>
                 </button>
                 <button class="js-volume-button control-button">
-                    <i class="fa fa-volume-off" aria-hidden="true"></i>
+                    <i class="fa fa-volume-off control-button-icon" aria-hidden="true"></i>
                 </button>
 
                 <div class="separator"></div>
